@@ -432,8 +432,13 @@ sub _attachment_headers {
     my $content_id = shift;
 
     my @headers;
-    push @headers, ( 'Content-ID' => $content_id )
-        if defined $content_id;
+
+    if ( defined $content_id ) {
+        $content_id = "<$content_id>"
+            unless $content_id =~ /^<[^>]+>$/;
+
+        push @headers, ( 'Content-ID' => $content_id );
+    }
 
     return Courriel::Headers->new( headers => \@headers );
 }
@@ -598,6 +603,9 @@ attachment.
 This will set the Content-ID header for the attachment. If you're creating a
 HTML body with "cid:" scheme URLs, you'll need to set this for each attachment
 that the HTML body refers to.
+
+The id will be wrapped in angle brackets ("<id-goes-here>") when set as a
+header.
 
 =back
 
